--- a/src/Todo/Popup.css
+++ b/src/Todo/Popup.css
@@ -1,4 +1,4 @@
-
+/* 
 .toggle-popup {
   height: 100%;
 }
@@ -58,4 +58,4 @@
   height: 16px;
   transform: rotate(45deg);
   background-color: var(--popup-color);
-}
+} */
