--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -168,6 +168,7 @@
 }
 
 .todo .task-area .task-list .task-list-item.disable {
+  --primary-color: var(--disable-color) !important;
   background-color: var(--disable-color);
 }
 
